--- a/main.css
+++ b/main.css
@@ -1,10 +1,19 @@
 body{
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, 
+    background: linear-gradient( rgba(2,0,36,1) 0%, 
     rgba(9,121,95,0.5746673669467788) 35%, rgba(0,212,255,1) 100%);
 }
-h1{
+header{
+    background-color: rgba(135, 163, 204,0.3);
+    width: 100%;
+    height: 80px;
     text-align: center;
+    margin-top: 40px;
+    line-height: 80px;
+    height: 80px; 
 
+}
+h1{
+    color:white;
 }
 table{
     border: 1%;
@@ -13,6 +22,8 @@ table{
 p{
     size: 30%;
     background-color: rgba(0, 0, 0, 0.2);
+    text-align: center;
+    border-radius: 15px;
 
 }
 td{
@@ -30,4 +41,7 @@ button{
 body{
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, 
     rgba(9,121,95,0.5746673669467788) 35%, rgba(0,212,255,1) 100%);
+}
+th{
+    text-align: center;
 }
