--- a/main.css
+++ b/main.css
@@ -3,21 +3,31 @@ body{
     rgba(9,121,95,0.5746673669467788) 35%, rgba(0,212,255,1) 100%);
     /* background-image: url("https://i.ibb.co/7tn03S4/london2.jpg"); */
 }
-header{
-    background-color: rgba(135, 163, 204,0.3);
+/* header{
+    background-color: rgba(135, 163, 204,0.3); 
     width: 100%;
     height: 80px;
     text-align: center;
     margin-top: 100px;
     line-height: 80px;
     height: 80px; 
-
-}
-h1{
+    text-shadow: black;
+    border-radius: 15px;
+    
+} */
+/* h1{
     color:white;
     font-family: cursive;
     font-weight: bolder;
     font-size: 4em;
+    
+} */
+h2{
+    color:white;
+    font-family: cursive;
+    font-weight: bolder;
+    font-size: 3em;
+    margin-top: 210px;
 }
 
 p{
@@ -33,17 +43,19 @@ td{
     border-radius: 10px;
     padding: 10px;
     width: 30%;
-    height: 250px;
+    height: 260px;
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 tr{
     size: 30%;
 }
 button{
-    background-color: Transparent;
+    background-color:  rgba(2,0,36,0.3);
     background-repeat:no-repeat;
     border: none;
+    border-radius: 5px;
     cursor:pointer;
     overflow: hidden;
     outline:none;
@@ -58,6 +70,25 @@ body{
 }
 th{
     text-align: center;
+}
+a{
+    color: turquoise;
+}
+#head{
+ position: fixed;
+ color:white;
+ font-family: cursive;
+ font-weight: bolder;
+ font-size: 4em;
+ background-color: rgba(104, 188, 194, 1.0); 
+ width: 100%;
+ height: 80px;
+ text-align: center;
+ margin-top: 100px;
+ line-height: 80px;
+ height: 80px; 
+ text-shadow: black;
+ border-radius: 15px;
 }
 /* td .#london{
     width: 250px;
